<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@color/main"
    tools:context=".TechFragment"
    tools:showIn="@layout/app_bar_main">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_gravity="start"
        android:id="@+id/rGroup"
        >

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/car"
            android:id="@+id/CarRB"
            android:background="@drawable/button" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/minubus"
            android:id="@+id/MinubusRB"
            android:background="@drawable/button" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/trkto35"
            android:id="@+id/TrkTo35RB"
            android:background="@drawable/button" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/bus"
            android:id="@+id/BusRB"
            android:background="@drawable/button" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/trkfrom35"
            android:id="@+id/TrkFrom35"
            android:background="@drawable/button" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/trailer"
            android:id="@+id/TrailerRB"
            android:background="@drawable/button" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/motomoped"
            android:id="@+id/MotoRB"
            android:background="@drawable/button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="20dp"
            android:text="@string/zeroDram"
            android:id="@+id/Sum"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/price"
            android:textStyle="italic"
            />
    </RadioGroup>
</ScrollView>