<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:background="@color/main"
    android:fillViewport="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="AppaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <!-- ԱՄ Տեսակ -->
        <TextView
            android:id="@+id/CarType_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CarType"
            android:textStyle="italic"
            android:textSize="@dimen/labelSize" />
        <Spinner
            android:id="@+id/carType_spinner"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/spinner"
            android:entries="@array/carType_spinner"
            android:layout_marginTop="1dp"/>

        <!-- ԱՄ Օգտագործման նպատակ -->
        <TextView
            android:id="@+id/CarUseType_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CarUseType"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/labelSize"
            android:textStyle="italic"/>

        <Spinner
            android:id="@+id/CarUseType_spinner"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/spinner"
            android:entries="@array/carUseType_sniper"
            android:layout_marginTop="1dp"
            />

        <!-- Շարժիչի հզորություն -->
        <TextView
            android:id="@+id/CarPower_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CarPower"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/labelSize"
            android:textStyle="italic"/>

        <Spinner
            android:id="@+id/CarPower_spinner"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/spinner"
            android:entries="@array/power"
            android:layout_marginTop="1dp" />

        <!-- Կցորդի առկայություն -->
        <TextView
            android:id="@+id/CarTrailer_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CarTrailer"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/labelSize"
            android:textStyle="italic"/>
        <Spinner
            android:id="@+id/CarTrailer_spinner"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/spinner"
            android:entries="@array/trailer"
            android:layout_marginTop="1dp"/>

        <!-- Վարորդի տարիք / ստաժ -->
        <TextView
            android:id="@+id/Driver_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Driver"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/labelSize"
            android:textStyle="italic"/>
        <Spinner
            android:id="@+id/Driver_spinner"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/spinner"
            android:entries="@array/driver_sniper"
            android:layout_marginTop="1dp"/>


        <!-- ԲՄ դաս -->
        <TextView
            android:id="@+id/DriverBM_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DriverBM"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/labelSize"
            android:textStyle="italic"/>
        <Spinner
            android:id="@+id/DriverBM_spinner"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/spinner"
            android:entries="@array/bm"
            android:layout_marginTop="1dp"/>

        <!-- Ժամկետ -->
        <TextView
            android:id="@+id/TIme_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Time"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/labelSize"
            android:textStyle="italic"/>
        <Spinner
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/spinner"
            android:entries="@array/time"
            android:layout_marginTop="1dp"/>

        <TextView
            android:text="@string/dram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/sum"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:textSize="@dimen/price"
            android:textStyle="italic"/>
    </LinearLayout>
</ScrollView>