<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:background="@color/main"
    android:fillViewport="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".PropertyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <!-- ԱՄ Տեսակ -->
        <TextView
            android:id="@+id/CarType_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TransType"
            android:textStyle="italic"
            android:textSize="@dimen/labelSize"/>
        <Spinner
            android:id="@+id/carType_spinner"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/spinner"
            android:entries="@array/propType_spinner"
            android:layout_marginTop="1dp"/>

        <!-- Թողարկման տարեթիվ -->
        <TextView
            android:id="@+id/CarUseType_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ProdDate"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/labelSize"
            android:textStyle="italic"/>
        <Spinner
            android:id="@+id/ProdDate"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/spinner"
            android:layout_marginTop="1dp"/>


        <!-- Շարժիչի հզորություն -->
        <TextView
            android:id="@+id/CarPower_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CarPowers"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/labelSize"
            android:textStyle="italic"/>
        <Spinner
            android:id="@+id/taxBase"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/spinner"
            android:entries="@array/taxBase"
            android:layout_marginTop="1dp"/>


        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="5"
                android:id="@+id/Power"
                android:layout_gravity="start"
                android:gravity="center_horizontal"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:hint="@string/hp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Calculate"
                android:id="@+id/calc"
                android:layout_gravity="end"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/button"/>
        </RelativeLayout>

        <TextView
            android:text="@string/zeroDram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sum"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:textSize="@dimen/price"
            android:textStyle="italic"/>
    </LinearLayout>
</ScrollView>